fixed issue with 100vh on mobile

--- a/styles/components/_about.scss
+++ b/styles/components/_about.scss
@@ -10,7 +10,7 @@ $gradient: linear-gradient(
   grid-template-rows: 50vh 1fr;
   grid-template-columns: 1fr;
   gap: 3rem;
-  min-height: 100vh;
+  min-height: var(--doc-height);
 
   @include media(map-get($screen, 'tablet')) {
     grid-template-rows: 1fr;
